use the partial template for search listing for initial load, add skeleton load to search listing page and begin work on the filter redesign

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -24,7 +24,7 @@
     Eaglespoint Horizon Limited, study abroad, international education, work visa, permanent residence, flight booking, visa processing, hotel reservation, real estate in Nigeria, scholarships, SAT coaching, IELTS preparation, TOEFL tutoring, global travel services, university admission, flexible learning, relocation assistance, property services, travel consulting, education consulting
     {% endblock %}">
 
-    <!-- Open Graphh Tags -->
+    <!-- Open Graph Tags -->
     <meta property="og:title" content="{% block og_title%} Eaglespoint Horizon Limited | Real Estate, Travel & International Education Experts {% endblock %}">
     <meta property="og:description" content="{% block og_description %}Start your global journey with Eaglespoint—trusted advisors in real estate, international education, and travel services. Get expert help with university admissions, visa processing, and property investments. {% endblock %}">  
     <meta property="og:image" content="{% block og_image %}{{ request.scheme }}://{{ request.get_host }}{% static 'images/eaglespoint-logo.png' %}{% endblock %}">
