--- a/listing/templates/listing/partials/listing-items.html
+++ b/listing/templates/listing/partials/listing-items.html
@@ -1,5 +1,17 @@
 {% for result in results %}
-    {% component "listing_card" title="{{result.title}}" href="{% url 'listing:property_details' result.id %}" price="{{result.price}}" size="{{result.size}}" type="{{result.listing_type}}" imageUrl="/media/{{result.cover_image}}" address="{{result.street_address}}, {{result.lga}}, {{result.state}}" %} {% endcomponent %}
+    {% component "listing_card" 
+                    title=result.title 
+                    href="{% url 'core:property_details_by_id' result.id %}" 
+                    price=result.price 
+                    size=result.size 
+                    type=result.listing_type 
+                    imageUrl=result.cover_image.url 
+                    address="{{result.street_address}}, {{result.lga}}, {{result.state}}" 
+                    listing=result 
+                    id=result.pk 
+                    user_favourites=user_favourites 
+                %}
+    {% endcomponent %}   
 {% endfor %}
 {% comment %} to pass to the load more button {% endcomment %}
 {% if has_next %}
